--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,13 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="hello">Hello World!</string>
-    <string name="app_name">Slide Screen K-9 Plugin</string>
+    <string name="app_name">Slide Screen Trac Plugin</string>
     
     
     
     <string name="pref_about_title">About</string>
     <string name="pref_about_summary">Information about the plugin</string>
     
-    <string name="preferences_label">K-9 Plugin Settings</string>
-    <string name="about_label">About K-9 for SlideScreen</string>
+    <string name="preferences_label">Trac Plugin Settings</string>
+    
+    <string name="preferences_server_settings">Server Settings</string>
+    <string name="preferences_server_url">Server URL</string>
+    <string name="preferences_server_authorization">Server Authorization</string>
+    
+    <string name="preferences_server_username">Username</string>
+    <string name="preferences_server_password">Password</string>
+    
+    <string name="preferences_query">Query Settings</string>
+    <string name="preferences_query_owner">Owner</string>
+    
+    <string name="about_label">About Trac for SlideScreen</string>
+    
+    <string-array name="authMethods"> 
+    	<item>Anonymous</item>
+    	<item>Basic Authorization</item>    
+    </string-array>
+    
 </resources>
